[tool.poetry]
name = "selphi"
version = "1.2.0"
description = "Genotype imputation using PBWT and haplotype selection"
authors = ["Adriano De Marino <adriano@selfdecode.com>", "Sandra Bohn <sandra@selfdecode.com>"]
readme = "README.md"
packages = [{ include = "rd-imputation-selphi" }]

[tool.poetry.dependencies]
python = "^3.11"
commitizen = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
version = "1.2.0"
version_files = ["pyproject.toml:version"]
